@@ -906,6 +906,13 @@ type Curator @entity {
   combinedSignalCount: Int!
   "Amount of active name signals and signals for this user. signalCount + nameSignalCount"
   activeCombinedSignalCount: Int!
+
+  allCurrentGRTValue: BigInt!
+  PLGrt: BigDecimal!
+  unrealizedPLGrt: BigDecimal!
+  realizedPLGrt: BigDecimal!
+  lastSignaledAt: Int!
+  lastUnsignaledAt: Int!
 }
 
 """
@@ -945,6 +952,13 @@ type Signal @entity {
   createdAtBlock: Int!
   "Block number where this entity was last updated"
   lastUpdatedAtBlock: Int!
+
+  currentGRTValue: BigInt!
+  PLGrt: BigDecimal!
+  unrealizedPLGrt: BigDecimal!
+  realizedPLGrt: BigDecimal!
+
+  lastBuyInPrice: BigDecimal!
 }
 
 """
@@ -993,6 +1007,13 @@ type NameSignal @entity {
 
   entityVersion: Int!
   linkedEntity: NameSignal
+
+  currentGRTValue: BigInt!
+  PLGrt: BigDecimal!
+  unrealizedPLGrt: BigDecimal!
+  realizedPLGrt: BigDecimal!
+
+  lastBuyInPrice: BigDecimal!
 }
 
 """
@@ -1275,12 +1296,12 @@ type RewardCutHistoryEntity @entity {
   "The percent of indexing rewards generated by the total stake that the Indexer keeps for itself. In parts per million"
   indexingRewardCut: Int!
   "In parts per million"
-  indexingRewardEffectiveCut: BigInt!
+  indexingRewardEffectiveCut: BigDecimal!
 
   "The percent of query rebate rewards the Indexer keeps for itself. In parts per million"
   queryFeeCut: Int!
   "In parts per million"
-  queryFeeEffectiveCut: BigInt!
+  queryFeeEffectiveCut: BigDecimal!
 
   blockNumber: Int!
   timestamp: Int!
@@ -1313,6 +1334,16 @@ type DelegatorRewardHistoryEntity @entity {
   timestamp: Int!
   epoch: Int!
 }
+
+"""
+ZONE OF DARK MAGIC DONT USE IT OR U DIE
+"""
+type DeploymentSignalsQueue @entity {
+  "ID is 0 - infinity"
+  id: ID!
+  subgraphDeployment: ID!
+}
+
 """
 Full test search for displayName and description on the Subgraph Entity
 """
